--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AAAAA</title>
+  <title>Teacher</title>
   <style>
     body {
       background-color: #000;
@@ -72,7 +72,7 @@
 
   <div class="video-container">
     <video id="myVideo" controls>
-      <source src="https://cdn.videy.co/7qPwpypk1.mp4" type="video/mp4">
+      <source src="https://cdn.videy.co/N3JZh6n61.mp4" type="video/mp4">
       Browser Anda tidak mendukung pemutar video.
     </video>
 
